# dallas_based_github

./: .gitignore  CITATION.cff  DATA_AVAILABILITY.md  LICENSE  README.md  REPLICATION_NOTES.md  main.py  pyproject.toml  requirements.txt  run_base.sh  setup.py
.github/workflows/: tests.yml
data/features/: blocks.jsonl  offenders.jsonl  offenders_post_covid.jsonl  victims.jsonl  victims_post_covid.jsonl
dcm/: __init__.py  interactions.py  mle_utils.py  models.py  protocols.py  tests.py
scripts/base/: README_base.md  config_base.yaml  distance_decay_base.py  distance_robustness_check.py  make_synthetic_base_data.py  plotter_base.py  run_base.sh  run_base_sample.sh  saver_base.py  summarizer_base.py  table_utils.py
scripts/base/preprocessing/: README.md  generate_sample_raw_data.py  geocode_addresses.py  prepare_agents.py  prepare_blocks.py
scripts/base/preprocessing/mappers/: race_remap.json  recategorize_crime.csv
